--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body { background: url(http://i6.beon.ru/89/95/209589/22/11824122/iiiuio.gif); }
 <big><tt><big><font style="color:white">Многим может показаться, что это обычный Игорь, но на самом деле под лицом одиннадцатиклассника скрывается <big><b>ВОР</b>!!!!</big></font></big></tt></big>
 <br/><br/>
 <center><img alt="Игорилла"
-src="https://yadi.sk/i/Cc13dfZxuOUSUQ"></center>
+src="https://radikal.ru/lfp/c.radikal.ru/c07/1910/98/7be3d7db4c71.jpg/htm"></center>
 <br><br/>
 <big><big><font style="color:white">Если вы не все еще не поняли чем опасен этот чебурек, то вы теряете время, ибо я предлагаю вам побыстрее спрятать свое <big><b><a href="https://ru.wikipedia.org/wiki/%D0%A1%D0%B5%D1%80%D0%B4%D1%86%D0%B5"><font style="color:FFFF99">сердечко</font></a></b></big> и ваши <font style="color:FFFF99"><b>глазные яблоки</b></font>, иначе этот опасный <font style="color:red">МОНСТР</font> украдет их.</font></big></big> 
 <br><br/>
